--- a/resumes/templates/resumes/home.html
+++ b/resumes/templates/resumes/home.html
@@ -2,5 +2,5 @@
 
 {% block "content" %}
 <h1>Resume</h1>
-<a href="/resumes/new">新增 resume</a>
+<a href="{% url 'resumes:new' %}">新增 resume</a>
 {% endblock %}
