add Create of CRUD

--- a/resumes/templates/resumes/index.html
+++ b/resumes/templates/resumes/index.html
@@ -3,4 +3,11 @@
 {% block "content" %}
 <h1>Resume</h1>
 <a href="{% url 'resumes:new' %}">新增 resume</a>
+
+<ul>
+{% for resume in resumes %}
+  <li>{{ resume.title }}</li>
+{% endfor %}
+</ul>
+
 {% endblock %}
