add message for CRUD

--- a/templates/shared/layout.html
+++ b/templates/shared/layout.html
@@ -6,6 +6,7 @@
   <title>Python Developer</title>
 </head>
 <body>
+  {% include "shared/flash.html" %}
   {% block "content" %}{% endblock %}
 </body>
 </html>
