--- a/resumes/templates/resumes/edit.html
+++ b/resumes/templates/resumes/edit.html
@@ -13,6 +13,9 @@
   skill: <br />
   <input type="text" name="skill" value="{{ resume.skill }}" /><br />
 
+  location: <br />
+  <input type="text" name="location" value="{{ resume.location }}" /><br />
+
   content:<br />
   <textarea name="content">{{ resume.content }}</textarea>
   <br />
