--- a/resumes/templates/resumes/new.html
+++ b/resumes/templates/resumes/new.html
@@ -13,6 +13,9 @@
   skill: <br />
   <input type="text" name="skill" /><br />
 
+  location: <br />
+  <input type="text" name="location" /><br />
+
   content:<br />
   <textarea name="content"></textarea>
   <br />
