add frontend assets

--- a/templates/shared/layout.html
+++ b/templates/shared/layout.html
@@ -1,13 +1,14 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Python Developer</title>
+  <script src="{% static "scripts/app.js" %}" type="module"></script>
 </head>
 <body>
   {% include "shared/flash.html" %}
   {% block "content" %}{% endblock %}
 </body>
 </html>
-
