--- a/templates/shared/layout.html
+++ b/templates/shared/layout.html
@@ -6,9 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Python Developer</title>
   <script src="{% static "scripts/app.js" %}" type="module"></script>
+  <link rel="stylesheet" href="{% static "styles/app.css" %}" />
 </head>
 <body>
   {% include "shared/flash.html" %}
-  {% block "content" %}{% endblock %}
+  {% include "shared/navbar.html" %}
+  <main class="container mx-auto">
+    {% block "content" %}{% endblock %}
+  </main>
 </body>
 </html>
