--- a/templates/shared/navbar.html
+++ b/templates/shared/navbar.html
@@ -1,10 +1,10 @@
 <nav class="bg-black text-white shadow text-xl py-4 px-6 flex justify-between">
   <ul>
-    <li>首頁</li>
+    <li><a href="{% url "pages:home" %}">PyDev</a></li>
   </ul>
 
   <ul class="flex gap-4">
-    <li>登入</li>
-    <li>註冊</li>
+    <li><a href="{% url "users:login" %}">登入</a></li>
+    <li><a href="{% url "users:register" %}">註冊</a></li>
   </ul>
 </nav>
