--- a/resumes/templates/resumes/index.html
+++ b/resumes/templates/resumes/index.html
@@ -1,8 +1,8 @@
 {% extends "shared/layout.html" %}
 
 {% block "content" %}
-<h1>Resume</h1>
-<a href="{% url 'resumes:new' %}">新增 resume</a>
+<h1 class="text-3xl">個人履歷</h1>
+<a href="{% url 'resumes:new' %}" class="btn btn-primary">新增 resume</a>
 
 <ul>
 {% for resume in resumes %}
