--- a/resumes/templates/resumes/new.html
+++ b/resumes/templates/resumes/new.html
@@ -1,14 +1,13 @@
 {% extends "shared/layout.html" %}
 
 {% block "content" %}
-<h1>新增 Resume</h1>
+<h1 class="text-3xl">新增 Resume</h1>
 
 <form method="POST" action="{% url 'resumes:index' %}">
   {% csrf_token %}
   {{ form.as_p }}
-
   <br />
-  <button>新增</button>
+  <button class="btn btn-primary">新增</button>
 </form>
 
 {% endblock %}
