--- a/templates/shared/navbar.html
+++ b/templates/shared/navbar.html
@@ -4,8 +4,13 @@
   </div>
   <div class="flex-none">
     <ul class="px-1 menu menu-horizontal">
-      <li><a href="{% url "users:login" %}">登入</a></li>
-      <li><a href="{% url "users:register" %}">註冊</a></li>
+      {% if user.is_authenticated %}
+        <li><a>{{ user.username }}</a></li>
+        <li><a hx-post="{% url "users:logout" %}">登出</a></li>
+      {% else %}
+        <li><a href="{% url "users:login" %}">登入</a></li>
+        <li><a href="{% url "users:register" %}">註冊</a></li>
+      {% endif %}
     </ul>
   </div>
 </div>
