--- a/resumes/templates/resumes/show.html
+++ b/resumes/templates/resumes/show.html
@@ -24,7 +24,7 @@
       <textarea name="content" class="textarea textarea-bordered"></textarea>
     </div>
     <div>
-      <button class="btn btn-md btn-primary">新增留言</button>
+      <button disabled class="btn btn-md btn-primary">新增留言</button>
     </div>
   </form>
 </section>
