--- a/static/styles/app.css
+++ b/static/styles/app.css
@@ -1871,12 +1871,24 @@ html {
   display: flex;
 }
 
+.hidden {
+  display: none;
+}
+
+.h-1 {
+  height: 0.25rem;
+}
+
 .w-full {
   width: 100%;
 }
 
 .w-1\/2 {
   width: 50%;
+}
+
+.w-1 {
+  width: 0.25rem;
 }
 
 .max-w-xs {
