--- a/resumes/templates/resumes/index.html
+++ b/resumes/templates/resumes/index.html
@@ -2,15 +2,23 @@
 
 {% block "content" %}
 
-<h1 class="text-3xl">個人履歷</h1>
-<a href="{% url 'resumes:new' %}" class="btn btn-primary">新增 resume</a>
+{% if user.is_authenticated %}
+  <h1 class="text-3xl">個人履歷</h1>
+  <a href="{% url 'resumes:new' %}" class="btn btn-primary">新增 resume</a>
+{% endif %}
 
 <ul>
 {% for resume in resumes %}
   <li>
-    <a href="{% url 'resumes:show' resume.id %}">
-      {{ resume.title }}
-    </a>
+    {% if user.is_authenticated %}
+      <a href="{% url 'resumes:show' resume.id %}">
+        {{ resume.title }}
+      </a>
+    {% else %}
+      <a href="{% url 'resumes:public' resume.id %}">
+        {{ resume.title }}
+      </a>
+    {% endif %}
   </li>
 {% endfor %}
 </ul>
