--- a/resumes/templates/resumes/show.html
+++ b/resumes/templates/resumes/show.html
@@ -19,10 +19,12 @@ POST /resumes/2/like
   </p>
 </article>
 
-<footer>
-  <a href="{% url 'resumes:edit' resume.id %}" class="btn btn-sm">編輯</a>
-  <a href="{% url 'resumes:delete' resume.id %}" class="btn btn-sm">刪除</a>
-</footer>
+{% if resume.user == user %}
+  <footer>
+    <a href="{% url 'resumes:edit' resume.id %}" class="btn btn-sm">編輯</a>
+    <a href="{% url 'resumes:delete' resume.id %}" class="btn btn-sm">刪除</a>
+  </footer>
+{% endif %}
 
 <section>
   <form class="flex flex-col gap-2"
